# snap-coin-faucet

./: .gitignore
backend/: .env.example  Cargo.toml
backend/src/: main.rs
snap-coin-faucet/: index.html  package.json
snap-coin-faucet/src/: App.tsx  CodeBox.tsx  NavBar.tsx  index.css  utils.ts
